chore: upgrade vertx 5.x