@@ -1,14 +1,10 @@
 package com.example.demo;
 
-
 import io.reactivex.rxjava3.core.Flowable;
 import io.reactivex.rxjava3.core.Single;
-import io.vertx.rxjava3.sqlclient.Pool;
-import io.vertx.rxjava3.sqlclient.Row;
-import io.vertx.rxjava3.sqlclient.RowSet;
-import io.vertx.rxjava3.sqlclient.SqlResult;
-import io.vertx.rxjava3.sqlclient.Tuple;
-import lombok.extern.slf4j.Slf4j;
+import io.vertx.rxjava3.sqlclient.*;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import java.util.List;
 import java.util.Objects;
@@ -17,11 +13,11 @@ import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
-@Slf4j
 public class PostRepository {
+    private static final Logger log = LoggerFactory.getLogger(PostRepository.class);
 
-    private static Function<Row, Post> MAPPER = (row) ->
-        Post.of(
+    private static final Function<Row, Post> MAPPER = (Row row) ->
+        new Post(
             row.getUUID("id"),
             row.getString("title"),
             row.getString("content"),
@@ -31,8 +27,8 @@ public class PostRepository {
 
     private final Pool client;
 
-    private PostRepository(Pool _client) {
-        this.client = _client;
+    private PostRepository(Pool pgClient) {
+        this.client = pgClient;
     }
 
     //factory method
@@ -47,48 +43,57 @@ public class PostRepository {
             .flattenAsFlowable(
                 rows -> StreamSupport.stream(rows.spliterator(), false)
                     .map(MAPPER)
-                    .collect(Collectors.toList())
+                    .toList()
             );
     }
 
 
     public Single<Post> findById(UUID id) {
         Objects.requireNonNull(id, "id can not be null");
-        return client.preparedQuery("SELECT * FROM posts WHERE id=$1").rxExecute(Tuple.of(id))
+        return client.preparedQuery("SELECT * FROM posts WHERE id=$1")
+            .rxExecute(Tuple.of(id))
             .map(RowSet::iterator)
-            .flatMap(iterator -> iterator.hasNext() ? Single.just(MAPPER.apply(iterator.next())) : Single.error(new PostNotFoundException(id)));
+            .flatMap(iterator -> iterator.hasNext() ?
+                Single.just(MAPPER.apply(iterator.next())) :
+                Single.error(new PostNotFoundException(id))
+            );
     }
 
     public Single<UUID> save(Post data) {
-        return client.preparedQuery("INSERT INTO posts(title, content) VALUES ($1, $2) RETURNING (id)")
-            .rxExecute(Tuple.of(data.getTitle(), data.getContent()))
+        String sql = "INSERT INTO posts(title, content) VALUES ($1, $2) RETURNING (id)";
+        return client.preparedQuery(sql)
+            .rxExecute(Tuple.of(data.title(), data.content()))
             .map(rs -> rs.iterator().next().getUUID("id"));
     }
 
     public Single<Integer> saveAll(List<Post> data) {
         var tuples = data.stream()
-            .map(d -> Tuple.of(d.getTitle(), d.getContent()))
+            .map(d -> Tuple.of(d.title(), d.content()))
             .collect(Collectors.toList());
 
-        return client.preparedQuery("INSERT INTO posts (title, content) VALUES ($1, $2)")
+        String sql = "INSERT INTO posts (title, content) VALUES ($1, $2)";
+        return client.preparedQuery(sql)
             .rxExecuteBatch(tuples)
             .map(SqlResult::rowCount);
     }
 
     public Single<Integer> update(Post data) {
-        return client.preparedQuery("UPDATE posts SET title=$1, content=$2 WHERE id=$3")
-            .rxExecute(Tuple.of(data.getTitle(), data.getContent(), data.getId()))
+        String sql = "UPDATE posts SET title=$1, content=$2 WHERE id=$3";
+        return client.preparedQuery(sql)
+            .rxExecute(Tuple.of(data.title(), data.content(), data.id()))
             .map(SqlResult::rowCount);
     }
 
     public Single<Integer> deleteAll() {
-        return client.query("DELETE FROM posts").rxExecute()
+        String sql = "DELETE FROM posts";
+        return client.query(sql).rxExecute()
             .map(SqlResult::rowCount);
     }
 
     public Single<Integer> deleteById(UUID id) {
         Objects.requireNonNull(id, "id can not be null");
-        return client.preparedQuery("DELETE FROM posts WHERE id=$1").rxExecute(Tuple.of(id))
+        String sql = "DELETE FROM posts WHERE id=$1";
+        return client.preparedQuery(sql).rxExecute(Tuple.of(id))
             .map(SqlResult::rowCount);
     }
 
